# agno-learning

./: .env.example  .gitignore  AGENTS.md  README.md  SECURITY.md  pyproject.toml  requirements.txt  start-dashboard.sh
.beads/: issues.jsonl
00_getting_started/01_hello_agent/: README.md  main.py
00_getting_started/02_multi_provider/: README.md  main.py
00_getting_started/03_structured_output/: README.md  main.py
00_getting_started/04_streaming/: README.md  main.py
01_tools/01_builtin_tools/: README.md  main.py
01_tools/02_custom_tools/: README.md  main.py
01_tools/03_tool_context/: README.md  main.py
01_tools/04_mcp_tools/: README.md  main.py
02_knowledge/01_pdf_knowledge/: README.md  main.py
02_knowledge/02_url_knowledge/: README.md  main.py
02_knowledge/03_json_csv_knowledge/: README.md  main.py
02_knowledge/04_vector_search/: README.md  main.py
03_memory/01_session_state/: README.md  main.py
03_memory/02_user_memories/: README.md  main.py
03_memory/03_agentic_memory/: README.md  main.py
03_memory/04_history/: README.md  main.py
04_teams/01_basic_team/: README.md  main.py
04_teams/02_coordinate_mode/: README.md  main.py
04_teams/03_route_mode/: README.md  main.py
04_teams/04_collaborate_mode/: README.md  main.py
05_workflows/01_basic_workflow/: README.md  main.py
07_real_world/: dashboard.html
gui/backend/: main.py
openspec/: AGENTS.md  mega-examples.md  portal.md
sample_data/: knowledge_chunks.txt  sample_agno_overview.txt
scripts/: discovery.py  sync-env.sh
shared/: __init__.py  model_config.py  utils.py
(+549 files in other folders)
