[project]
name = "agno-learning"
version = "1.0.0"
description = "A hands-on learning platform for Agno AI agents"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    # Core AI framework
    "agno>=2.3.0",
    
    # LLM providers (native Agno support)
    "openai>=1.50.0",
    "anthropic>=0.40.0",
    "google-generativeai>=0.8.0",
    
    # Vector database (local, no Docker)
    "lancedb>=0.15.0",
    
    # Knowledge base support
    "pypdf>=5.0.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",
    
    # Utilities
    "python-dotenv>=1.0.0",
    "pydantic>=2.9.0",
    "rich>=13.9.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
# Production deployment
production = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.0",
]

# Development tools
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.8.0",
]

# All dependencies
all = [
    "agno-learning[production,dev]",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["shared"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]  # Line length handled by formatter

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
